syntax = "proto3";

message UpdateDocRequest {
    string id = 1;
    oneof one_of_data { string data = 2; };
}
message UpdateDocParams {
    string id = 1;
    oneof one_of_data { string data = 2; };
}
